--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,11 +12,11 @@
         }
     ],
     "liveSassCompile.settings.excludeList": [
-        "**/node_modules/**",
-        ".vscode/**"
+        "/**/node_modules/**",
+        "/.vscode/**"
     ],
     "liveSassCompile.settings.generateMap": true,
-    "liveServer.settings.port": 1235,
+    "liveServer.settings.port": 7777,
     "liveSassCompile.settings.autoprefix": [
         "> 1%",
         "last 2 versions"
